--- a/site/_data/nav.yml
+++ b/site/_data/nav.yml
@@ -9,8 +9,8 @@ items:
     text: Pricing
   - link: "/about"
     text: About
-  - link: "/blogs"
-    text: Blogs
+  - link: "/blog"
+    text: Blog
   - link: "/contact"
     text: Contact
 btn:
