--- a/component-library/components/contact/form/form.bookshop.yml
+++ b/component-library/components/contact/form/form.bookshop.yml
@@ -32,7 +32,7 @@ blueprint:
     message:
       heading: "Your Messages"
       placeholder: "Any Message"
-    submit_btn:
+    submit_button:
       text: "Send message"
 
 # Overrides any fields in the blueprint when viewing this component in the component browser
