--- a/component-library/components/global/signup/signup.bookshop.yml
+++ b/component-library/components/global/signup/signup.bookshop.yml
@@ -24,7 +24,7 @@ blueprint:
     checkbox_text: By registering, you accept our Conditions, Use Policy and
       Privacy Notice.
     signup_text: Create an Account
-    login_btn:
+    login_button:
       link: /login
       text: Log In
 
