--- a/component-library/components/home/video/video.bookshop.yml
+++ b/component-library/components/home/video/video.bookshop.yml
@@ -9,7 +9,8 @@ spec:
 
 # Defines the structure of this component, as well as the default values
 blueprint:
-  image_path: "/images/video/video-thum.jpg"
+  image: "/images/video/video-thum.jpg"
+  image_alt: Thumbnail for video
   video_url: "https://vimeo.com/45830194"
 
 # Overrides any fields in the blueprint when viewing this component in the component browser
