--- a/component-library/components/about/hero/hero.bookshop.yml
+++ b/component-library/components/about/hero/hero.bookshop.yml
@@ -12,13 +12,16 @@ blueprint:
   title: One mission to make the better marketing
   description: The stats are in our favour. SaaSFlow doesn't just help you with your email marketing.
   hero_images:
-    - image_path: /images/about/aboutfeature-two.png
-      placer: front_buttom
-    - image_path: /images/about/aboutfeature-three.png
-      placer: back_top_right
-    - image_path: /images/about/aboutfeature-four.png
-      placer: back_top_left
-  btn:
+    - image: /images/about/aboutfeature-two.png
+      image_alt: People working
+      placement: front_buttom
+    - image: /images/about/aboutfeature-three.png
+      image_alt: Group of people looking at a computer
+      placement: back_top_right
+    - image: /images/about/aboutfeature-four.png
+      image_alt: Staff group photo
+      placement: back_top_left
+  button:
     text: "See more"
     link: "/signup"
 
@@ -29,7 +32,7 @@ preview:
 _inputs:
   description:
     type: markdown
-  placer:
+  placement:
     type: select
     options:
       values:
