--- a/component-library/components/about/video/video.bookshop.yml
+++ b/component-library/components/about/video/video.bookshop.yml
@@ -17,11 +17,12 @@ blueprint:
     blame belongs to those who fail in their duty through weakness of
     will, which is the same as saying through shrinking from toil and
     pain. These cases are perfectly simple and easy to distinguish.
-  btn:
+  button:
     link: https://www.linkedin.com/company/staticmania/
     text: Follow on Linkedin
   video:
-    image_path: /images/works/banner.jpg
+    image: /images/works/banner.jpg
+    image_alt: Placeholder image for the video
     link: https://vimeo.com/45830194
 
 # Overrides any fields in the blueprint when viewing this component in the component browser
