--- a/cloudcannon.config.yml
+++ b/cloudcannon.config.yml
@@ -16,7 +16,7 @@ collections_config:
 
 _inputs:
   date:
-    instance_value: now
+    type: date
   title_suffix:
     comment: Added at the end of the title and highlighted in a different color
   pagination.data:
