--- a/component-library/components/global/faq/faq.bookshop.yml
+++ b/component-library/components/global/faq/faq.bookshop.yml
@@ -11,7 +11,7 @@ spec:
 blueprint:
   title: Have
   title_suffix: Questions?
-  description: The stats are in our favour. SaaSFlow doesn't just help you with your email marketing, we get you customer relationships that last.
+  description: We believe that a good email marketing strategy is the key to growth. So we’re helping you grow your business with tools and resources that make email marketing easy.
   FAQ:
     - title: What if I unplug all selected apps at once?
       description: Lorem ipsum dolor sit amet consectetur adipisicing elit. Enim illo quasi quia doloremque dignissimos rerum perspiciatis, officiis optio natus beatae!
