--- a/site/_data/nav.yml
+++ b/site/_data/nav.yml
@@ -13,6 +13,9 @@ items:
     text: Blog
   - link: "/contact"
     text: Contact
-btn:
+button:
   link: "/signup"
   text: Get Started
+_inputs:
+  logo:
+    type: image
