--- a/component-library/components/pricing/table/table.bookshop.yml
+++ b/component-library/components/pricing/table/table.bookshop.yml
@@ -12,29 +12,14 @@ blueprint:
   pricing_tier:
     - tier: free
       description: For starters Includes unlimited members
+      currency_symbol: $
       price: 0
       has_discount: false
       discount_price: 0
-      is_active: false
-      feature:
+      highlight_tier: false
+      features:
         - item: 1 Site Activation
-          is_active: true
-        - item: 1 Year Premium Support
-          is_active: true
-        - item: Regular Update for 1 Year
-          is_active: true
-        - item: 90+ Widgets & Extensions
-          is_active: true
-        - item: 23+ Templates
-          is_active: true
-        - item: Over 800 Section Blocks
-          is_active: false
-        - item: Support
-          is_active: false
-        - item: 3 filters
-          is_active: false
-        - item: Unlimited activity history
-          is_active: false
+          active_feature: true
       button:
         link: /login
         text: Try This Free
@@ -44,5 +29,7 @@ preview:
 
 # Any extra CloudCannon inputs configuration to apply to the blueprint
 _inputs:
+  features:
+    type: array
   description:
     type: markdown
