--- a/package.json
+++ b/package.json
@@ -3,11 +3,13 @@
    "version": "1.0.0",
    "description": "Sendit is a email marketing tool which ensures the business growth",
    "scripts": {
-      "bookshop": "bookshop-browser",
+      "bookshop:watch": "bookshop-browser",
+      "bookshop-sass:fetch-theme-color": "node site/js/fetch-theme-color.js",
+      "bookshop-sass:build": "bookshop-sass -b component-library -o site/css/theme.css",
+      "bookshop-sass:watch": "bookshop-sass -b component-library -o site/css/theme.css -w",
       "jekyll": "bundle exec jekyll serve --port 6060 --trace --unpublished",
-      "start": "run-p bookshop jekyll",
-      "package-install": "bundle install && npm i",
-      "build": "jekyll build"
+      "start": "npm-run-all bookshop-sass:fetch-theme-color bookshop-sass:build --parallel bookshop-sass:watch bookshop:watch jekyll"
+
    },
    "author": "CloudCannon",
    "license": "MIT",
@@ -15,6 +17,7 @@
       "@bookshop/browser": "3.3.0",
       "@bookshop/generate": "3.3.0",
       "@bookshop/jekyll-engine": "3.3.0",
-      "npm-run-all": "^4.1.5"
+      "npm-run-all": "^4.1.5",
+      "@bookshop/sass": "3.3.3"
    }
 }
