--- a/site/_data/site.yml
+++ b/site/_data/site.yml
@@ -5,7 +5,12 @@ favicon_image: "/images/favicon.png"
 description: "A polished, marketing website template built with Eleventy"
 twitter_image: "/images/feature/feature-hero-two.png"
 twitter_site: "@twitter_site"
-image: "/images/feature/feature-hero.png"
+image: /images/feature/feature-hero.png
+
+_inputs:
+  twitter_site:
+    type: twitter
+    
 theme: 
   primary_color: "#e53b2a"
   secondary_color: "#fffbf3"
