--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
    "dependencies": {
       "@bookshop/browser": "3.3.0",
       "@bookshop/generate": "3.3.0",
+      "@bookshop/jekyll-engine": "3.0.0",
       "npm-run-all": "^4.1.5",
       "@bookshop/sass": "3.3.3"
    }
