--- a/component-library/components/privacy/privacy/privacy.bookshop.yml
+++ b/component-library/components/privacy/privacy/privacy.bookshop.yml
@@ -11,9 +11,9 @@ spec:
 blueprint:
   terms_and_conditions:
     - heading: Sendit Terms And Conditions
-      description: "<p>A slider is great way to display a slideshow.</p><p>The WordPress sites being easy to use, offers many plugins for slider. You could imagine slideshows in your head and make them true on the screen.</p>"
+      description: "<p>By using Sendit, you agree to the terms and conditions listed on this page.</p><p>Sendit may change the terms on this page. We will take steps to notify you when this occurs, but you are responsible for staying up-to-date with these changes.</p>"
     - heading: Account Information & Payments
-      description: "<ul><li>The main benefit of using sliders is presenting all the contents in a visually pleasing manner.</li><li>The WordPress sites being easy to use, offers many plugins for slider. You could imagine slideshows in your head and make them true on the screen.</li></ul>"
+      description: "<ul><li>Fees must be paid at or before the date specified in your payment plan.</li><li>Failure to pay account fees may result in restricted or suspended access to your Sendit account.</li></ul>"
 
 # Overrides any fields in the blueprint when viewing this component in the component browser
 preview:
