updates collection configs

--- a/cloudcannon.config.yml
+++ b/cloudcannon.config.yml
@@ -1,18 +1,84 @@
+collections_config_override: true
+data_config:
+  blog-tags: true
 collections_config:
   pages:
+    icon: feed
+    disable_add_folder: true
+    output: true
+    path: pages
     schemas:
       page:
         path: site/schemas/page.html
     _enabled_editors:
       - visual
   blog:
-    path: 'blog'
+    path: blog
+    icon: article
+    disable_add_folder: true
+    output: true
     schemas:
       default:
         path: site/schemas/post.md
+    preview:
+      metadata: 
+        - icon: newspaper
+          text: 
+            - key: tags
     _enabled_editors:
       - content
       - visual
+  meta_data: 
+    output: true
+    path: _data
+    icon: settings
+    disable_add: true
+    disable_add_folder: true
+    _enabled_editors:
+      - data
+    filter:
+      exclude: 
+        - nav.yml
+        - footer.yml
+        - theme.json
+  site_navigation:
+    output: true
+    path: _data
+    icon: table_rows
+    disable_add: true
+    disable_add_folder: true
+    _enabled_editors:
+      - data
+    filter:
+      base: none
+      include: 
+        - nav.yml
+        - footer.yml
+  theme_palette:
+    output: true
+    path: _data
+    disable_add: true
+    disable_add_folder: true
+    icon: color_lens
+    _enabled_editors:
+      - data
+    filter:
+      base: none
+      include: 
+        - theme.json
+        
+collection_groups:
+  - heading: Pages
+    collections:
+      - pages
+  - heading: Blogging
+    collections:
+      - blog
+  - heading: Site Settings
+    collections:
+      - meta_data
+      - theme_palette
+      - site_navigation
 
 _inputs:
   date:
