--- a/cloudcannon.config.yml
+++ b/cloudcannon.config.yml
@@ -204,3 +204,10 @@ _inputs:
   twitter_site:
     type: twitter
     label: Twitter Username
+  
+
+paths:
+  uploads: images
+  data: _data 
+  includes: _includes
+  layouts: _layouts
