--- a/cloudcannon.config.yml
+++ b/cloudcannon.config.yml
@@ -1,4 +1,5 @@
 source: site
+collections_config_override: true
 data_config:
   blog-tags: true
 collections_config:
@@ -204,3 +205,10 @@ _inputs:
   twitter_site:
     type: twitter
     label: Twitter Username
+
+paths:
+  uploads: images
+  data: _data
+  collections: site
+  includes: layouts
+  layouts: layouts
