--- a/cloudcannon.config.yml
+++ b/cloudcannon.config.yml
@@ -1,5 +1,5 @@
 source: site
-collections_config_override: true
+collections_config_override: false
 data_config:
   blog-tags: true
 collections_config:
@@ -205,10 +205,3 @@ _inputs:
   twitter_site:
     type: twitter
     label: Twitter Username
-
-paths:
-  uploads: images
-  data: _data
-  collections: site
-  includes: layouts
-  layouts: layouts
