--- a/cloudcannon.config.yml
+++ b/cloudcannon.config.yml
@@ -6,7 +6,7 @@ collections_config:
     icon: feed
     disable_add_folder: true
     output: true
-    path: pages
+    path: site
     schemas:
       page:
         path: site/schemas/page.html
