--- a/cloudcannon.config.yml
+++ b/cloudcannon.config.yml
@@ -10,8 +10,11 @@ collections_config:
         path: site/schemas/page.html
     _enabled_editors:
       - visual
+    filter:
+      exclude:
+        - schemas/
   blog:
-    path: blog
+    path: _posts
     icon: article
     disable_add_folder: true
     output: true
