--- a/cloudcannon.config.yml
+++ b/cloudcannon.config.yml
@@ -11,8 +11,9 @@ collections_config:
     _enabled_editors:
       - visual
     filter:
-      exclude:
-        - schemas/
+      base: none
+      include:
+        - '*.html'
   blog:
     path: _posts
     icon: article
