--- a/cloudcannon.config.yml
+++ b/cloudcannon.config.yml
@@ -6,6 +6,7 @@ collections_config:
     icon: feed
     disable_add_folder: true
     output: true
+    parse_branch_index: true
     schemas:
       page:
         path: site/schemas/page.html
