--- a/cloudcannon.config.yml
+++ b/cloudcannon.config.yml
@@ -9,8 +9,8 @@ collections_config:
     parse_branch_index: true
     filter:
       exclude:
-        - schemas 
-        - blog
+        - /schemas 
+        - /blog
     schemas:
       page:
         path: site/schemas/page.html
