updates nav button hidden state

--- a/site/_data/nav.yml
+++ b/site/_data/nav.yml
@@ -37,6 +37,6 @@ _inputs:
   logo:
     type: image
   nav_button:
-    hidden: "!enable_button"
+    hidden: "!enable_nav_button"
   enable_nav_button:
     type: switch
